--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,7 +56,7 @@ a:hover {
 }
 
 .wide-screen-only {
-  display: auto;
+  display: initial;
 }
 .narrow-screen-only {
   display: none;
@@ -155,7 +155,7 @@ a:hover {
     display: none;
   }
   .narrow-screen-only {
-    display: auto;
+    display: initial;
   }
 }
 
